--- a/Moped_reviews_analysis.ipynb
+++ b/Moped_reviews_analysis.ipynb
@@ -240,7 +240,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv('moped.csv')\n",
+    "data = pd.read_csv('datasets/moped.csv')\n",
     "display(data.head(10))"
    ]
   },
